--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="js/excanvas.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
+	<script src="js/test.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="title">
@@ -26,5 +27,6 @@
 	</body>
 	<script type="text/javascript">
 		init();
+		test();
 	</script>
 </html>
